Prevented vertical overflow on domino lists.

--- a/style.css
+++ b/style.css
@@ -474,7 +474,8 @@ table {
 
 .domino-words-a {
     width: calc(var(--domino-width)/2);
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     border-right: 1px solid #999;
     display: flex;
     flex-direction: row;
@@ -499,7 +500,8 @@ table {
 
 .domino-words-b {
     width: calc(var(--domino-width)/2);
-    overflow: auto;
+    overflow-x: auto;
+    overflow-y: hidden;
     padding: 2px 0;
     display: flex;
     flex-direction: row;
